"""
This package contains macros and subpackages for initializing all of the individual libraries and
toolchains required to build the Oppia Android project & its constituent projects (such as scripts).
"""

load("@rules_java//java:defs.bzl", "java_plugin")

package_group(
    name = "tool_visibility",
    packages = ["//tools"],
)

java_plugin(
    name = "moshi_annotation_processor_plugin",
    generates_api = True,
    processor_class = "com.squareup.moshi.kotlin.codegen.apt.JsonClassCodegenProcessor",
    visibility = ["//third_party:artifact_visibility"],
    deps = [
        "//third_party/app_prod:com_squareup_moshi_moshi-kotlin",
        "//third_party/app_prod:com_squareup_moshi_moshi-kotlin-codegen",
    ],
)

java_plugin(
    name = "glide_compiler_plugin",
    generates_api = True,
    processor_class = "com.bumptech.glide.annotation.compiler.GlideAnnotationProcessor",
    visibility = ["//third_party:artifact_visibility"],
    deps = ["//third_party/app_prod:com_github_bumptech_glide_compiler"],
)
