"""
This package contains macros and subpackages for initializing all of the individual libraries and
toolchains required to build the Oppia Android project & its constituent projects (such as scripts).
"""

load("@rules_java//java:defs.bzl", "java_plugin")

package_group(
    name = "tool_visibility",
    packages = ["//tools"],
)

# TODO: Reintroduce a artifact_visibility & fix all public visibilities.
java_plugin(
    name = "moshi_annotation_processor_plugin",
    generates_api = True,
    processor_class = "com.squareup.moshi.kotlin.codegen.apt.JsonClassCodegenProcessor",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:com_squareup_moshi_moshi-kotlin",
        "//third_party:com_squareup_moshi_moshi-kotlin-codegen",
    ],
)

java_plugin(
    name = "glide_compiler_plugin",
    generates_api = True,
    processor_class = "com.bumptech.glide.annotation.compiler.GlideAnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = ["//third_party:com_github_bumptech_glide_compiler"],
)
