# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library contains utilities that all other modules, minus model, depend on.
"""

load("//defs:oppia_android_library.bzl", "oppia_android_resource_library")

# Visibility for utility tests.
package_group(
    name = "utility_testing_visibility",
    packages = [
        "//utility",
        "//utility/src/test/...",
    ],
)

oppia_android_resource_library(
    name = "resources",
    package = "org.oppia.android.util",
    resource_files = glob(["src/main/res/**/*.xml"]),
    visibility = ["//:oppia_api_visibility"],
)

oppia_android_resource_library(
    name = "test_resources",
    testonly = True,
    package = "org.oppia.android.util",
    resource_files = glob(["src/test/res/**"]),
    visibility = ["//:oppia_testing_visibility"],
)
