java_plugin(
    name = "compiler_annotation_processor",
    processor_class = "android.databinding.annotationprocessor.ProcessDataBinding",
    visibility = ["//visibility:public"],
    deps = [
      "@bazel_tools//src/tools/android/java/com/google/devtools/build/android:all_android_tools",
    ],
)