# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
Top-level testing module files & targets.
"""

filegroup(
    name = "test_manifest",
    srcs = ["AndroidManifest.xml"],
    visibility = ["//:oppia_testing_visibility"],
)

kt_android_library(
    name = "retrofit_module",
    srcs = [
        "RetrofitModule.kt",
    ],
    visibility = ["//:oppia_testing_visibility"],
    deps = [
        ":dagger",
        ":oppia_retrofit",
        ":prod_module",
        "//third_party:com_squareup_retrofit2_converter-moshi",
    ],
)
