load("@dagger//:workspace_defs.bzl", "dagger_rules")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "oppia_test_application",
    testonly = True,
    srcs = [
        "EndToEndTestGcsResourceModule.kt",
        "EndToEndTestImageParsingModule.kt",
        "EndToEndTestNetworkModule.kt",
        "OppiaTestApplication.kt",
        "TestApplicationComponent.kt",
    ],
    visibility = ["//:oppia_testing_visibility"],
    deps = [
        ":dagger",
        "//app",
        "//domain",
        "//utility",
        "//utility/src/main/java/org/oppia/android/util/caching:caching_module",
    ],
)

dagger_rules()
